<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.sw2017.calculator.Calculator">


    <Button
        android:id="@+id/button0"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_C"
        app:layout_constraintLeft_toRightOf="@+id/button0"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/buttonplus"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_plus"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonminus"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/buttonminus"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_minus"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttondiv"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/buttondiv"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_div"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonmul"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/buttonmul"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_mul"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonC"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_3"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttoneq"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_5"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_6"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_7"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_8"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_9"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/buttoneq"
        android:layout_width = "88dp"
        android:layout_height = "80dp"
        android:text="@string/string_eg"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonC"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
